test/resources/valid/Valid.flo
action TOGGLE_LOGIN_MODAL = toggle();

flow MODALS = {
    boolean isLoginModalOpen = false;
    TOGGLE_LOGIN_MODAL >> isLoginModalOpen;
}